--- a/app/views/static_pages/about.html.haml
+++ b/app/views/static_pages/about.html.haml
@@ -1,2 +1,3 @@
-%h1 StaticPages#about
-%p Find me in app/views/static_pages/about.html.haml
+- provide(:title, 'About')
+%h1 About
+%p Eventually will be filled with information about the about page. No less.
