--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -13,4 +13,6 @@
   %body
     = render 'layouts/navbar'
     = yield
+    .panel
+      = debug(params) if Rails.env.development?
     = javascript_include_tag "application"
