Finish user signup

--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -12,6 +12,7 @@
 
   %body
     = render 'layouts/navbar'
+    = render 'shared/flash_messages'
     = yield
     .panel
       = debug(params) if Rails.env.development?
