--- a/app/views/layouts/_navbar.html.haml
+++ b/app/views/layouts/_navbar.html.haml
@@ -6,5 +6,18 @@
 
   %section.top-bar-section
     %ul.right
-      - { About: about_path, "Sign up" => signup_path }.each do |page_name, page_path|
-        %li{class: current_page?(page_path) && "active" }= link_to page_name, page_path
+      %li{class: current_page?(about_path) && "active" }
+        = link_to "About", about_path
+      - if signed_in?
+        %li.has-dropdown
+          = link_to truncate(current_user.name, length: 13), "#"
+          %ul.dropdown
+            %li{class: current_page?(current_user) && "active"}= link_to "Profile", current_user
+            %li{class: current_page?("#") && "active"}= link_to "Settings", "#"
+            %li{class: current_page?(signin_path) && "active"}= link_to "Sign out", signout_path, method: "delete"
+      - else
+        %li.has-dropdown
+          = link_to "User", "#"
+          %ul.dropdown
+            %li{class: current_page?(signup_path) && "active" }= link_to "Sign up", signup_path
+            %li{class: current_page?(signin_path) && "active" }= link_to "Sign in", signin_path
