--- a/app/views/shared/_flash_messages.html.haml
+++ b/app/views/shared/_flash_messages.html.haml
@@ -1,2 +1,4 @@
 - flash.each do |key, value|
-  %div{class: ["alert-box", "radius", "#{key}"], data: {alert: true} }= value
+  %div{class: ["alert-box", "#{key}"], data: {alert: true} }
+    = value
+    != link_to "&times;".html_safe, "#", { class: "close" }
